# earthkit-workflows-pproc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
configs/: args.yaml  config.yaml
docs/examples/: efi.ipynb  efi.yaml  ensms.ipynb  multi-prods.ipynb
src/earthkit/workflows/plugins/pproc/: _version.py  fluent.py  products.py  templates.py
src/earthkit/workflows/plugins/pproc/utils/: grib.py  io.py  math.py  patch.py  request.py
src/ppcascade/: __init__.py  actions.py  config.py  config_generation.py  fieldlist_backend.py  fluent.py  functions.py  graph_config.py  grib.py  io.py  main.py  products.py  templates.py
src/ppcascade/backends/: arrayapi.py  fieldlist.py
src/ppcascade/entry/: genconfig.py  parsemars.py  parser.py
src/ppcascade/utils/: grib.py  io.py  math.py  patch.py  request.py  window.py
src/ppcascade/wrappers/: array_list.py  fieldlist.py  metadata.py  sources.py
tests/: schema.yaml  test_depth_first_scheduler.py  test_fluent.py  test_fluent_graphs.py  test_functions.py  test_io.py  test_patch.py  test_products.py  test_templates.py  test_transformers.py
tests/backends/: generic_tests.py  test_arrayapi.py  test_fieldlist.py
tests/entry/: test_genconfig.py
tests/helpers/: mock.py
tests/templates/: clustereps.yaml  ensms.yaml  extreme.yaml  prob.yaml  quantiles.yaml  t850.yaml  wind.yaml
tests/utils/: test_io.py  test_patch.py
tests/wrappers/: test_metadata.py
