[build-system]
requires = ["setuptools>=78", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pproc-cascade" # TODO when changing the name, also change `tool.setuptools_scm.write_to` !
description = "TODO"
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "earthkit-meteo>=0.1.1",
    "filelock>=3.12.0",
    "numexpr",
    "dill",
    "cython",
    "scipy",
    "code-meters",
    "earthkit-data",
    "earthkit-workflows",
    "pyfdb",
    # "fdb5lib", # TODO enable once stably published
    "pproc @ git+ssh://git@github.com/ecmwf/pproc.git@1.2.0"
]
# version provided via setuptools_scm module, which derives it from git tag
dynamic = ["version", "readme"]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["black", "isort", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = ["readme.md"], content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "src/ppcascade/_version.py"
write_to_template = '''# Do not change! Do not track in version control!
__version__ = "{version}"
'''
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
