[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pproc-cascade"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "earthkit-meteo>=0.1.1",
    "filelock>=3.12.0",
    "numexpr",
    "dill",
    "cython",
    "scipy",
    "code-meters",
    "earthkit-workflows @ git+https://github.com/ecmwf/earthkit-workflows",
    "pyfdb",
    "pproc @ git+ssh://git@github.com/ecmwf/pproc.git@feature/io-requests"
]

[project.optional-dependencies]
tests = ["pytest"]
lint = ["black", "isort", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
