# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthkit-workflows-pproc"
description = "An earthkit-workflows interface to PProc"
license = { text = "Apache License Version 2.0" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.10"
dynamic = [ "version" ]

dependencies = [
    "earthkit-meteo>=0.1.1",
    "filelock>=3.12.0",
    "numexpr",
    "dill",
    "cython",
    "scipy",
    "code-meters",
    "earthkit-workflows @ git+https://github.com/ecmwf/earthkit-workflows",
    "pyfdb",
    "pproc @ git+ssh://git@github.com/ecmwf/pproc.git@feature/io-requests"
]


[project.optional-dependencies]
tests = ["pytest"]
lint = ["black", "isort", "flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools_scm]
version_file = "src/earthkit/workflows/plugins/pproc/_version.py"

[tool.isort]
profile = "black"
